--- a/docs/_static/css/font.css
+++ b/docs/_static/css/font.css
@@ -3,6 +3,13 @@
     src: url(/_static/exo2/Exo2-VariableFont_wght.ttf);
   }
   
-  p, a, h1, h2, h3 {
+  p, h1, h2, h3 {
     font-family: exo2 !important;
   }
+
+
+/*  Exo2 does not have certain symbols, like the double gear used in the 
+    header link. */
+a:not(.headerlink) {
+    font-family: exo2 !important;
+}
